RESOLVED FIXED183932
[Web Animations] infinite repeat counts aren't reflected for CSS Animations
https://bugs.webkit.org/show_bug.cgi?id=183932
Summary [Web Animations] infinite repeat counts aren't reflected for CSS Animations
Antoine Quint
Reported 2018-03-23 04:22:10 PDT
[Web Animations] infinite repeat count aren't reflected for CSS Animations
Attachments
Patch (7.67 KB, patch)
2018-03-23 04:24 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2018-03-23 04:24:17 PDT
Dean Jackson
Comment 2 2018-03-23 04:29:25 PDT
Comment on attachment 336363 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=336363&action=review > Source/WebCore/ChangeLog:3 > + [Web Animations] infinite repeat count aren't reflected for CSS Animations counts?
Antoine Quint
Comment 3 2018-03-23 04:40:28 PDT
(In reply to Dean Jackson from comment #2) > Comment on attachment 336363 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=336363&action=review > > > Source/WebCore/ChangeLog:3 > > + [Web Animations] infinite repeat count aren't reflected for CSS Animations > > counts? Fixed the bug title.
Antoine Quint
Comment 4 2018-03-23 04:49:12 PDT
Radar WebKit Bug Importer
Comment 5 2018-03-23 04:50:22 PDT
Note You need to log in before you can comment on or make changes to this bug.